syntax = "proto3";

option go_package = "github.com/poommu-sp/public-exim-grpc-protocol/samantra/services/winfeed/contract_report;contract_report";

package samantra.services.winfeed.contract_report;

import "samantra/services/master_service/master.proto";
import "google/protobuf/timestamp.proto";

service WinfeedContract {
  rpc GetSummaryByProductCodesAndDate(GetSummaryByProductCodesAndDateRequest) returns (ContractReportSummaryResponse) {}
  rpc GetSummaryByDateAndTimeDigitStringAndProductCodesAndPlantCodes(GetSummaryByDateAndTimeDigitStringAndProductCodesAndPlantCodesRequest) returns (ContractReportSummaryResponse) {}
}

message GetSummaryByProductCodesAndDateRequest {
  repeated string ProductCodes = 1;
  string Date = 2;
  string TimeTwoDigit = 3;
}

message GetSummaryByDateAndTimeDigitStringAndProductCodesAndPlantCodesRequest {
  google.protobuf.Timestamp Date = 1;
  string TimeDigit = 2;
  repeated string ProductCodes = 3;
  repeated string PlantCodes = 4;
}

message ContractSummaryItem {
  string ID = 1;
  string ReceivedDate = 2;
  string ReceivedTime = 3;
  string PlantCode = 4;
  string PlantName = 5;
  string OrgCode = 6;
  string OrgName = 7;
  string ProductGroup = 8;
  string ProductGroupName = 9;
  string ProductCode = 10;
  string ProductName = 11;
  string ContractStatus = 12;
  string DivisionCode = 13;
  string ContractNO = 14;
  string TransferFlag = 15;
  string VendorCode = 16;
  string VendorName = 17;
  string ContractDate = 18;
  string StartDate = 19;
  string ExpireDate = 20;
  double ContractWeight = 21;
  double BalanceWeight = 22;
  string Status = 23;
  double UnitPrice = 24;
  double SpecMax = 25;
  double SpecMin = 26;
  double SpecAdjustPrice = 27;
  bool IsActive = 28;
  string ProductNameInReportName = 29;
  string SubProductNameInReportName = 30;
  repeated double UnitPrices = 31;
}

message ContractReportSummaryItem {
  master.Plant Plant = 1;
  repeated ContractSummaryItem SelectedDayContract = 2;
  repeated ContractSummaryItem AnotherDayContract = 3;
  double SelectedDayWeight = 4;
  double AnotherDayWeight = 5;
  double TotalWeight = 6;
}

message ContractReportSummaryResponse {
  repeated ContractReportSummaryItem ContractReportSummaryList = 1;
}
